--- a/Final_Project/src/userinterface/AdministrativeRole/ManageUserAccountJPanel.form
+++ b/Final_Project/src/userinterface/AdministrativeRole/ManageUserAccountJPanel.form
@@ -131,6 +131,9 @@
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="employeeJComboBoxActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="140" y="250" width="170" height="-1"/>
